@@ -17,6 +17,9 @@
 "BOB_PNL_HDV","Hide vanilla"
 "BOB_PNL_ACT","Actions"
 "BOB_PNL_MOD","Replacement mode"
+"BOB_PNL_LAN","Select lane"
+"BOB_PNL_LAN_TIP","Select a specific lane in the network for modification, or choose to show all lanes"
+"BOB_PNL_LAN_ALL","All lanes"
 "BOB_PNL_FUN","Extra functions"
 "BOB_PNL_M_PIB","Individual props in these buildings"
 "BOB_PNL_M_PGB","All props of this type in these buildings"
